@@ -386,36 +386,24 @@ Simple_Lock_Cleanup (void)
 void
 Lock_Cleanup (void)
 {
-    static short int never_run_again = 0;
-
     TRACE (TRACE_FUNCTION, "Lock_Cleanup()");
 
-    /* Since main_cleanup() always calls exit() (via error (1, ...)), we avoid
-     * allowing this function to be called twice as an optimization.
-     *
-     * If we are already in a signal critical section, assume we were called
-     * via the signal handler and set a flag which will prevent future calls.
-     * The only time that we should get into one of these functions otherwise
-     * while still in a critical section is if error(1,...) is called from a
-     * critical section, in which case we are exiting and interrupts are
-     * already being ignored.
-     *
-     * For Lock_Cleanup(), this is not a run_once variable since Lock_Cleanup()
-     * can be called to clean up the current lock set multiple times by the
-     * same run of a CVS command.
-     *
-     * For server_cleanup() and rcs_cleanup(), this is not a run_once variable
-     * since a call to the cleanup function from atexit() could be interrupted
-     * by the interrupt handler.
+    /* FIXME: Do not perform buffered I/O from an interrupt handler like
+     * this (via error).  However, I'm leaving the error-calling code there
+     * in the hope that on the rare occasion the error call is actually made
+     * (e.g., a fluky I/O error or permissions problem prevents the deletion
+     * of a just-created file) reentrancy won't be an issue.
      */
-    if (never_run_again) return;
-    if (SIG_inCrSect()) never_run_again = 1;
 
     remove_locks ();
 
     /* Avoid being interrupted during calls which set globals to NULL.  This
      * avoids having interrupt handlers attempt to use these global variables
      * in inconsistent states.
+     *
+     * This isn't always necessary, because sometimes we are called via exit()
+     * or the interrupt handler, in which case signals will already be blocked,
+     * but sometimes we might be called from elsewhere.
      */
     SIG_beginCrSect();
     dellist (&lock_tree_list);
